src/style.css
h1,
h2 {
  font-weight: 700;
}

.weather-forecast-temperatures,
.weather-forecast-date,
.weather-description,
.temperature-description,
.date-format {
  font-size: 16px;
}

.hour-forecast,
.forecast-icon {
  font-size: 20px;
}

ul,
.date-format,
.weather-description {
  margin: 0;
  padding: 0;
}

.temperature-description,
.city,
.temperature-unit,
.celsius-link,
.fahrenheit-link {
  position: relative;
}

.city,
.temperature-description,
.city-buttons,
.weather-forecast-temperatures,
.weather-conditions {
  white-space: nowrap;
}

.weather-temperature,
.weather-forecast,
.search-button {
  text-align: center;
}

.search-form,
.city,
.hour-forecast {
  margin-top: 25px;
}

.temperature-unit,
.temperature-description,
.date-format,
.weather-description {
  list-style: none;
}

.search-button,
.weather-temperature,
.temperature-unit,
.celsius-link,
.fahrenheit-link,
.celsius-link:hover,
.fahrenheit-link:hover {
  color: white;
}

.weather-forecast,
.fab {
  color: black;
}

.celsius-link,
.fahrenheit-link {
  top: -22px;
  font-size: 15px;
  text-decoration: none;
}

.hour-forecast,
.celsius-link,
.fahrenheit-link {
  font-weight: 900;
}

.weather-temperature,
.weather-app {
  border: transparent;
}

.city-date,
.weather-temperature,
.weather-conditions {
  max-width: 33.33%;
}

body {
  background-image: url("https://i.pinimg.com/564x/ee/c4/16/eec4169c5e89189f59d86f21829e0454.jpg");
  background-size: cover;
  background-repeat: no-repeat;
  height: 1024px;
  font-family: "Barlow", sans-serif;
}

h1 {
  font-size: 24px;
}

h2 {
  font-size: 22px;
}

.recent-cities {
  border: none;
  font-size: 16.5px;
  background-color: transparent;
}

.search-form {
  margin-bottom: 35px;
}

.city-input {
  width: 75%;
  display: block;
  margin: 0 auto;
}

.search-button {
  margin-left: -60px;
}

.temperature {
  font-size: 50px;
  margin-right: -1px;
}

.weather-temperature {
  margin-top: -10px;
  border-radius: 50%;
  width: 180px;
  height: 180px;
}

.temperature-unit {
  margin-top: 35px;
}

.weather-temperature .active {
  cursor: default;
  color: rgb(24, 24, 24);
}

.temperature-description {
  margin-top: -3px;
}

.temperature-description::first-letter {
  text-transform: capitalize;
}

.weather-conditions {
  margin-top: 28px;
  text-align: right;
}

.hour-forecast {
  margin-bottom: -5px;
}

.weather-forecast-temperature-min {
  opacity: 0.5;
}

.weather-forecast {
  margin-top: 30px;
  margin-bottom: 15px;
}

.forecast-icon {
  padding: 15px 0px 15px 0px;
  opacity: 0.8;
}

.github-link {
  float: left;
  margin-left: 12px;
}

.weather-app {
  padding: 20px;
}

.weather-app-wrapper {
  max-width: 550px;
  margin: 30px auto;
  background-color: white;
  border-radius: 25px;
  opacity: 0.8;
  box-shadow: 3px 5px 5px 3px grey;
}

@media screen and (max-width: 768px) {
  .recent-cities {
    font-size: 15.5px;
  }
  #tokyo-button {
    display: none;
  }
}

@media screen and (max-width: 600px) {
  .recent-cities {
    font-size: 15px;
  }
  .search-button {
    margin-left: -55px;
  }
}

@media screen and (max-width: 575px) {
  h1 {
    font-size: 22px;
  }
  h2 {
    font-size: 20px;
  }
  .recent-cities {
    font-size: 13px;
  }
  .city-input {
    width: 70%;
  }
  .weather-temperature {
    margin-top: 0px;
    width: 155px;
    height: 155px;
  }
  .temperature-description {
    margin-top: -7px;
  }
  .weather-app-wrapper {
    max-width: 480px;
  }
}

@media screen and (max-width: 480px) {
  .city-date,
  .weather-temperature,
  .temperature-description {
    max-width: 100%;
  }
  .forecast-icon,
  .city-date,
  .weather-temperature {
    position: relative;
  }
  .recent-cities,
  .search-button {
    font-size: 12px;
  }
  .city-date,
  .weather-conditions {
    text-align: left;
  }
  h2 {
    font-size: 18px;
  }
  .recent-cities {
    margin-right: 0px;
  }
  .city {
    margin-top: 30px;
  }
  .city-input {
    margin-left: 45px;
  }
  .search-button {
    margin-left: -40px;
    margin-top: 3px;
  }
  .search-form {
    margin-top: 20px;
    margin-bottom: 55px;
  }
  .weather-conditions {
    margin-top: -85px;
  }
  .city-date {
    margin-top: -65px;
    margin-bottom: 5px;
  }
  .weather-temperature {
    margin-left: 160px;
    margin-top: -80px;
    height: 180px;
    width: 180px;
  }
  .temperature-description {
    margin-top: -3px;
  }
  .hour-forecast {
    text-align: center;
  }
  .weather-description {
    font-size: 15px;
  }
  .weather-app-wrapper {
    max-width: 400px;
  }
  body {
    height: 940px;
  }
}

@media screen and (max-width: 414px) {
  .recent-cities {
    font-size: 11px;
  }
  .search-button {
    margin-left: -35px;
    margin-top: 3px;
  }
  body {
    height: 900px;
  }
}

@media screen and (max-width: 390px) {
  .recent-cities {
    font-size: 10px;
    margin-right: -3px;
  }
  .search-button {
    margin-left: -30px;
  }
  .city-date {
    white-space: normal;
    margin-top: -65px;
    margin-bottom: -10px;
  }
  .temperature-description {
    margin-top: -8px;
  }
  .weather-temperature {
    margin-left: 155px;
    margin-top: -70px;
  }
  .forecast-icon {
    font-size: 19px;
    padding: 12px 0 12px 0;
  }
  .weather-app-wrapper {
    margin-top: 15px;
    max-width: 375px;
  }
  body {
    height: 850px;
  }
}

@media screen and (max-width: 375px) {
  .recent-cities {
    margin-right: -4px;
  }
  .weather-temperature {
    margin-left: 140px;
    margin-top: -70px;
  }
}

@media screen and (max-width: 360px) {
  h2 {
    font-size: 17px;
  }
  .recent-cities {
    font-size: 12px;
    margin-right: -3px;
  }
  .city-input {
    margin-left: 50px;
  }
  .search-button {
    font-size: 13px;
    margin-left: -20px;
    margin-top: 3px;
  }
  .city-date {
    margin-top: -50px;
    margin-bottom: 10px;
  }
  .weather-conditions {
    margin-top: -80px;
  }
  .weather-temperature {
    margin-left: 140px;
    margin-top: -84px;
    height: 170px;
    width: 170px;
  }
  .weather-description {
    font-size: 14px;
  }
  .weather-forecast-temperatures {
    white-space: normal;
  }
  .forecast-icon {
    font-size: 18px;
  }
  #london-button {
    display: none;
  }
  .weather-app-wrapper {
    max-width: 340px;
  }
  body {
    height: 895px;
  }
}

@media screen and (max-width: 320px) {
  h2,
  .date-format {
    white-space: nowrap;
  }
  h1,
  h2 {
    margin-bottom: 5px;
  }
  h1 {
    font-size: 22px;
  }
  h2 {
    font-size: 14px;
  }
  .weather-description {
    font-size: 13px;
  }
  .recent-cities {
    font-size: 10px;
    margin-right: -8px;
  }
  .city-input {
    width: 70%;
    height: 90%;
    margin-left: 30px;
    margin-top: 2px;
  }
  .search-button {
    margin-left: -30px;
    font-size: 10px;
  }
  .city {
    margin-top: 20px;
  }
  .city-date {
    margin-bottom: 0px;
  }
  .weather-conditions {
    margin-top: -75px;
    margin-top: -68px;
  }
  .weather-temperature {
    margin-left: 115px;
    margin-top: -70px;
    height: 155px;
    width: 155px;
  }
  .date-format {
    font-size: 14px;
  }
  .weather-app-wrapper {
    max-width: 310px;
  }
}

@media screen and (max-width: 280px) {
  .weather-forecast-date,
  .weather-forecast-temperatures,
  .date-format {
    font-size: 13px;
  }
  .recent-cities,
  .search-button {
    font-size: 9px;
  }
  .city-input {
    width: 85%;
    margin-left: 10px;
    margin-top: 2px;
  }
  .search-button {
    margin-left: -30px;
  }
  h1 {
    font-size: 19px;
  }
  h2 {
    display: none;
  }
  .city {
    margin-bottom: 10px;
  }
  .weather-forecast-temperatures {
    white-space: normal;
  }
  .temperature {
    font-size: 30px;
    margin-left: 10px;
  }
  .weather-temperature {
    margin-left: 105px;
    height: 130px;
    width: 130px;
  }
  .celsius-link,
  .fahrenheit-link {
    top: -13px;
    font-size: 8px;
  }
  .temperature-description {
    font-size: 12px;
    margin-top: 8px;
  }
  .weather-conditions {
    margin-top: -45px;
  }
  .forecast-icon {
    font-size: 16px;
  }
  #saopaulo-button {
    display: none;
  }
  .weather-app-wrapper {
    max-width: 280px;
  }
  body {
    height: 780px;
  }
}

